# AFL-Interface

./: README.md  case_info.hpp
afl-2.57b/: Makefile  afl-fuzz.c  afl-fuzz.codecheck.c  case_info.h  ccdl_distance_out.txt  config.h  default.profraw  makeup_main
monitor/: CMakeLists.txt  handler.h  main.cpp
monitor/src/: App.cpp
monitor/src/FuzzerManager/: Fuzzer.cpp  Fuzzer.hpp  FuzzerManager.cpp  FuzzerManager.hpp
monitor/src/controller/: Controller.hpp  TestController.hpp
monitor/src/dto/: TestMsgDto.hpp
monitor/src/utils/: case_info.cpp  case_info.h  case_info.hpp  mjson.h  mjson.hpp
monitor/test/case_info_tests/: fuzzer  fuzzer.cpp  server  server.cpp
monitor/test/fuzz_test_libxml2/: default.profraw
monitor/test/json_test/: main.cpp
